--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -91,16 +91,19 @@
 <div class="container text-center mt-4">
     <div class="row">
         <div class="col-md-3">
+            <a th:href="@{/}" class="btn btn-info" role="button">Go back to the main page</a>
+        </div>
+        <div class="col-md-3">
+            <a th:href="@{/patient/visit_history}" class="btn btn-info" role="button">Your visit history</a>
+        </div>
+        <div class="col-md-3">
+            <a th:href="@{/patient/update_account}" class="btn btn-success" role="button">Update account</a>
+        </div>
+        <div class="col-md-3">
             <form action="/logout" th:action="@{/logout}" method="post">
                 <button class="btn btn-danger" type="submit">Logout</button>
             </form>
         </div>
-        <div class="col-md-3">
-            <a th:href="@{/}" class="btn btn-info" role="button">Go back to the main page</a>
-        </div>
-        <div class="col-md-6">
-            <a th:href="@{/patient/visit_history}" class="btn btn-info" role="button">Your visit history</a>
-
         </div>
             </div>
         </div>
