--- a/src/main/resources/templates/finalize_meeting_request.html
+++ b/src/main/resources/templates/finalize_meeting_request.html
@@ -8,7 +8,6 @@
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
           crossorigin="anonymous">
     <style>
-        /* Dodatkowa stylizacja dla formularza */
         .container {
             max-width: 400px;
         }
@@ -37,10 +36,10 @@
             <h4>Visit cost: <span th:if="${visitTerm.doctor.earningsPerVisit}" th:text="${visitTerm.doctor.earningsPerVisit}">N/A</span></h4><br/>
         </div>
         <div class="mb-3">
-            <label for="opis" class="form-label"><h4>Description:</h4></label>
-            <textarea class="form-control" id="opis" name="description" rows="4" required></textarea>
+            <label for="description" class="form-label"><h4>Description:</h4></label>
+            <textarea class="form-control" id="description" name="description" rows="4" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Zapisz wizytę</button>
+        <button type="submit" class="btn btn-primary">Save visit</button>
     </form>
 </div>
 </body>
