--- a/src/main/resources/templates/edit-doctor.html
+++ b/src/main/resources/templates/edit-doctor.html
@@ -31,6 +31,18 @@
             <input type="text" class="form-control" id="phone" th:field="${doctor.phone}">
         </div>
         <div class="form-group">
+            <label for="country">Country:</label>
+            <input type="text" class="form-control" id="country" th:field="${doctor.clinic.country}">
+        </div>
+        <div class="form-group">
+            <label for="Postal code">Postal code:</label>
+            <input type="text" class="form-control" id="Postal code" th:field="${doctor.clinic.postalCode}">
+        </div>
+        <div class="form-group">
+            <label for="address">Address:</label>
+            <input type="text" class="form-control" id="address" th:field="${doctor.clinic.address}">
+        </div>
+        <div class="form-group">
             <label for="earningsPerVisit">Earnings per visit:</label>
             <input type="text" class="form-control" id="earningsPerVisit" th:field="${doctor.earningsPerVisit}">
         </div>
