changing OffsetDateTime to LocalDateTime; restAPI changes

--- a/src/main/resources/templates/meeting_processing_doctor.html
+++ b/src/main/resources/templates/meeting_processing_doctor.html
@@ -66,7 +66,7 @@
         <tr>
             <th>ID</th>
             <th>Description</th>
-            <th>Request Date</th>
+            <th>Visit start</th>
             <th>Action</th>
         </tr>
         </thead>
@@ -100,7 +100,7 @@
         <tr>
             <th>ID</th>
             <th>Description</th>
-            <th>visit end time</th>
+            <th>visit start time</th>
             <th>issue note</th>
             <th>issue receipt</th>
             <th>illness history</th>
@@ -140,7 +140,7 @@
         <tr>
             <th>ID</th>
             <th>Description</th>
-            <th>visit end time</th>
+            <th>visit start time</th>
             <th>patient email</th>
         </tr>
         </thead>
