--- a/src/main/resources/templates/custom-login.html
+++ b/src/main/resources/templates/custom-login.html
@@ -77,8 +77,8 @@
             </div>
             <div class="text-center mt-3">
                 <p>Not registered? Here you go!</p>
-                <a th:href="@{/doctor_register}" class="btn btn-info btn-light">Register as Doctor</a>
-                <a th:href="@{/patient_register}" class="btn btn-info btn-light">Register as Patient</a>
+                <a th:href="@{/doctor_register}" class="btn btn-info btn-light">Register as a Doctor</a>
+                <a th:href="@{/patient_register}" class="btn btn-info btn-light">Register as a Patient</a>
             </div>
             <div class="text-center mt-3">
                 <a th:href="@{/}" class="btn btn-info">Back to Main Page</a>
